@@ -1,8 +1,8 @@
 package com.github.black0nion.blackonionbot.commands.admin;
 
-import com.github.black0nion.blackonionbot.blackobjects.BlackGuild;
-import com.github.black0nion.blackonionbot.blackobjects.BlackMember;
-import com.github.black0nion.blackonionbot.blackobjects.BlackUser;
+import com.github.black0nion.blackonionbot.wrappers.jda.BlackGuild;
+import com.github.black0nion.blackonionbot.wrappers.jda.BlackMember;
+import com.github.black0nion.blackonionbot.wrappers.jda.BlackUser;
 import com.github.black0nion.blackonionbot.commands.SlashCommand;
 import com.github.black0nion.blackonionbot.commands.SlashCommandEvent;
 import com.github.black0nion.blackonionbot.misc.CustomPermission;
@@ -23,10 +23,9 @@ import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-@SuppressWarnings("unused")
 public class PermissionsCommand extends SlashCommand {
 
-	private static final OptionData userOption = new OptionData(OptionType.USER, "user", "The user to modify the permissions of");
+	private static final OptionData userOption = new OptionData(OptionType.USER, "user", "The user to modify the permissions of", true);
 
 	public PermissionsCommand() {
 		super(builder(
@@ -39,9 +38,9 @@ public class PermissionsCommand extends SlashCommand {
 					userOption,
 					new OptionData(OptionType.STRING, "permission", "The permission to remove", true)
 						.addChoices(Utils.add(
-							Arrays.stream(CustomPermission.values()).map(perm -> new Command.Choice(perm.name(), perm.name())).toList(),
+							Arrays.stream(CustomPermission.values()).map(perm -> new Command.Choice(perm.name(), perm.name())).collect(Collectors.toList()),
 							new Command.Choice("All permissions", "all")))),
-				new SubcommandData("list", "List the permissions of the user").addOption(OptionType.USER, "user", "The user to list the permissions of")
+				new SubcommandData("list", "List the permissions of the user").addOption(OptionType.USER, "user", "The user to list the permissions of", true)
 			)
 		).setAdminGuild());
 	}
@@ -55,10 +54,14 @@ public class PermissionsCommand extends SlashCommand {
 		}
 		if (Utils.equalsOneIgnoreCase(mode, "add", "remove", "list")) {
 			final BlackUser user = BlackUser.from(Objects.requireNonNull(e.getOption("user", OptionMapping::getAsUser)));
+			if (user.isBot()) {
+				cmde.send("invaliduser");
+				return;
+			}
 			if (mode.equalsIgnoreCase("list")) {
 				final List<CustomPermission> perms = user.getPermissions();
 				cmde.send("permissionsof",
-					new Placeholder("user", user.getName()),
+					new Placeholder("user", user.getFullNameEscaped()),
 					new Placeholder("perms", perms.size() != 0 ? perms.stream()
 						.map(CustomPermission::name)
 						.map(Utils::list)
@@ -69,16 +72,16 @@ public class PermissionsCommand extends SlashCommand {
 				String permissionString = e.getOption("permission", OptionMapping::getAsString);
 				CustomPermission permission = CustomPermission.parse(permissionString);
 				if (mode.equalsIgnoreCase("remove")) {
-					if (permission == null && !Objects.equals(permissionString, "ALL")) throw new NullPointerException("CustomPermission is null!");
+					if (permission == null && !Objects.equals(permissionString, "all")) throw new NullPointerException("CustomPermission is null!");
 					if (permission != null)
 						user.removePermissions(permission);
 					else
 						user.setPermissions(new ArrayList<>());
-					cmde.send("permsremoved", new Placeholder("perms", permissionString), new Placeholder("user", user.getFullName()));
+					cmde.send("permissionsremoved", new Placeholder("perms", permissionString), new Placeholder("user", user.getFullName()));
 				} else if (mode.equalsIgnoreCase("add")) {
 					if (permission == null) throw new NullPointerException("CustomPermission is null!");
 					user.addPermissions(permission);
-					cmde.send("permsadded", new Placeholder("perms", permissionString), new Placeholder("user", user.getFullName()));
+					cmde.send("permissionsadded", new Placeholder("perms", permissionString), new Placeholder("user", user.getFullName()));
 				}
 			}
 		} else {
